samples/_failures_safe/1760887798_530ad1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_440c18de.c: In function ‘main’:
./samples/SAFE/__tmp_440c18de.c:168:16: error: ‘token_type_to’ undeclared (first use in this function); did you mean ‘TokenType’?
  168 |                token_type_to
      |                ^~~~~~~~~~~~~
      |                TokenType
./samples/SAFE/__tmp_440c18de.c:168:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_440c18de.c:168:29: error: expected ‘)’ at end of input
  168 |                token_type_to
      |                             ^
      |                             )
./samples/SAFE/__tmp_440c18de.c:167:15: note: to match this ‘(’
  167 |         printf("%-12s %-15s %-6d %-6d\n",
      |               ^
./samples/SAFE/__tmp_440c18de.c:168:16: error: expected declaration or statement at end of input
  168 |                token_type_to
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_440c18de.c:168:16: error: expected declaration or statement at end of input
